        PR rtl-optimization/37360         * haifa-sched.c (max_issue): Do not assert that we never issue more         insns than issue_rate.  Add comment.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@140151 138bc75d-0d04-0410-961f-82ee72b054a4